Update Travis env

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,6 @@ script:
 matrix:
   exclude:
     - otp_release: 17.5
-      elixir: 1.2.4
+      elixir: 1.2.5
+    - otp_release: 18.3
+      elixir: 1.0.5
